--- a/.eleventy/includes/layout.html
+++ b/.eleventy/includes/layout.html
@@ -1,11 +1,108 @@
-<!doctype html>
+<!DOCTYPE html>
+<!--
+ UpFish - dynamically making fun of your movies
+ Copyright (C) 2021 Joey Parrish
+
+ This program is free software: you can redistribute it and/or modify
+ it under the terms of the GNU General Public License as published by
+ the Free Software Foundation, either version 3 of the License, or
+ (at your option) any later version.
+
+ This program is distributed in the hope that it will be useful,
+ but WITHOUT ANY WARRANTY; without even the implied warranty of
+ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ GNU General Public License for more details.
+
+ You should have received a copy of the GNU General Public License
+ along with this program.  If not, see <https://www.gnu.org/licenses/>.
+-->
 <html lang="en">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>UpFish</title>
     <style>
-      {% include "styles.css" %}
+
+body {
+  position: relative;
+
+  font-family: roboto, sans-serif;
+  font-size: 3vmin;
+  margin: 1em;
+
+  background-color: #151c28;
+  color: white;
+
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-image: url({{ ".eleventy/includes/ribbons.svg" | readFile | stripComments | svgDataUri }});
+}
+
+a {
+  color: #ffa17a;
+}
+
+p, ol, ul {
+  max-width: 800px;
+  margin: 1em auto;
+}
+
+li {
+  margin: 0 1em;
+}
+
+#logo {
+  width: 18vw;
+  height: 18vw;
+  margin-left: 3vw;
+  margin-top: 3vw;
+  margin-bottom: 3vmin;
+  content: url({{ "upfish.svg" | readFile | stripComments | svgDataUri }});
+}
+
+h1 {
+  position: absolute;
+  top: 3vw;
+  margin: auto;
+  width: 100%;
+  text-align: center;
+
+  font-size: 12vw;
+  font-weight: bold;
+}
+
+#installs img {
+  height: 30px;
+  display: block;
+  margin-bottom: 1em;
+}
+
+@media (orientation: landscape) {
+  #installs {
+    position: absolute;
+    right: 0;
+    top: 3em;
+  }
+  #installs img {
+    margin-right: 0;
+    margin-left: auto;
+  }
+}
+
+@media (orientation: portrait) {
+  #installs img {
+    display: none;
+  }
+}
+
+h2 {
+  text-align: center;
+}
+
+h2:not(:first-of-type) {
+  margin-top: 2em;
+}
+
     </style>
   </head>
   <body>
