Put reasonable bounds on font size

--- a/.eleventy/includes/layout.html
+++ b/.eleventy/includes/layout.html
@@ -28,6 +28,7 @@ body {
 
   font-family: roboto, sans-serif;
   font-size: 3vmin;
+  font-size: clamp(16px, 3vmin, 24px);
   margin: 1em;
 
   background-color: #151c28;
