--- a/.eleventy/includes/layout.html
+++ b/.eleventy/includes/layout.html
@@ -20,6 +20,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="{{ "upfish.svg" | readFile | stripComments | svgDataUri }}">
+
     <title>UpFish</title>
     <style>
 
